Correzioni
Non funzionano le APK